# git-dl

./: CHANGELOG.md  CONVENTIONS.md  Cargo.toml  README.md  flake.nix
.cargo/: deny.toml
.github/workflows/: release.yml
nix/: default.nix  flake.nix
src/: main.rs  repo.rs  token.rs
src/cli/: error.rs  mod.rs
src/git_interface/: error.rs  mod.rs
src/git_interface/git/: mod.rs
src/github_interface/: error.rs  mod.rs  response_parser.rs
src/github_interface/github/: mod.rs
src/repo/: error.rs
