[package]
name = "git-dl"
version = "1.2.10"
edition = "2021"
authors = ["Eric Crosson <eric.s.crosson@utexas.edu>"]
license = "MIT OR Apache-2.0"
description = "Clone a git repository to a structured directory"
readme = "README.md"
repository = "https://github.com/EricCrosson/git-dl"
homepage = "https://github.com/EricCrosson/git-dl"
keywords = ["cli", "git"]
categories = ["command-line-utilities"]
exclude = [
  "/.envrc",
  "/.github",
  "/flake.{lock,nix}"
]

[profile.release]
lto = true
codegen-units = 1
strip = true
